# citrus

./: .gitignore  CMakeLists.txt  README.md  linter.sh
.github/workflows/: ci.yml
container/: Dockerfile
include/: citrusConfig.h.in  entry.h  log.h
sandbox/src/: main.c
src/: entry.c  log.c  main.c
test/src/: main.c
